--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,14 @@
-# Core FastAPI
 fastapi==0.115.6
-uvicorn[standard]==0.34.0
-
-# OpenAI SDK (para API NVIDIA)
-openai==1.59.5
-
-# Pydantic (validação e serialização)
 pydantic==2.10.5
 pydantic-settings==2.7.1
-
-# ASGI Server dependencies
-starlette==0.45.2
-anyio==4.8.0
-sniffio==1.3.1
-
-# HTTP clients
-httpx==0.28.1
-httpcore==1.0.7
-
-# Type annotations
-typing-extensions==4.12.2
-
-# Optional but recommended
+uvicorn[standard]==0.34.0
+openai==1.59.5
 python-dotenv==1.0.1
+httpx==0.28.1
+torch==2.10.0
+transformers==5.0.0
+
+#Dev Tools
+pytest==8.3.4
+pytest-asyncio==0.25.2
+
