--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ python-dotenv==1.0.1
 httpx==0.28.1
 torch==2.10.0
 transformers==5.0.0
+redis==7.1.0
+aio-pika==9.5.8
 
 #Dev Tools
 pytest==8.3.4
 pytest-asyncio==0.25.2
-
+debugpy==1.8.20
